--- a/MemeMeWarmUp/Base.lproj/Main.storyboard
+++ b/MemeMeWarmUp/Base.lproj/Main.storyboard
@@ -1,24 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MemeMeWarmUp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xR9-J3-IEF">
+                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="1Dv-Hp-AiV"/>
+                                    <barButtonItem title="Album" id="hac-KD-Utq">
+                                        <connections>
+                                            <action selector="pickAnImage:" destination="BYZ-38-t0r" id="B9J-53-Fy1"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="qvT-GN-XlR"/>
+                                    <barButtonItem systemItem="camera" id="EGs-Hl-LXl">
+                                        <connections>
+                                            <action selector="pickedAnImageFromCamera:" destination="BYZ-38-t0r" id="aWd-qE-Pi1"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="dMW-bW-kSC"/>
+                                </items>
+                            </toolbar>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="upper text" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ch8-Be-mue">
+                                <rect key="frame" x="50" y="144.5" width="314" height="34"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" red="0.97647058959999999" green="0.36078432199999999" blue="0.2352941036" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="LOWER TEXT" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q0w-zT-1Su">
+                                <rect key="frame" x="50" y="717.5" width="314" height="34"/>
+                                <color key="textColor" red="0.97647058959999999" green="0.36078432199999999" blue="0.2352941036" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                            </textField>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S8D-gd-G7j">
+                                <rect key="frame" x="10.5" y="134.5" width="393" height="627"/>
+                            </imageView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="waS-lE-IQz">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <items>
+                                    <navigationItem title="Meme Me" id="Tft-yB-AWp">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="7jd-6u-d6O">
+                                            <connections>
+                                                <action selector="shareButton:" destination="BYZ-38-t0r" id="RUU-Av-x6V"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ch8-Be-mue" secondAttribute="trailing" constant="50" id="8S9-km-LMm"/>
+                            <constraint firstItem="waS-lE-IQz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="DeN-b7-iM4"/>
+                            <constraint firstItem="xR9-J3-IEF" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Gif-Sc-lyg"/>
+                            <constraint firstItem="waS-lE-IQz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="JPj-DM-SRG"/>
+                            <constraint firstItem="S8D-gd-G7j" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="SOD-rS-8i3"/>
+                            <constraint firstItem="waS-lE-IQz" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="T7u-yn-A4L"/>
+                            <constraint firstItem="xR9-J3-IEF" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Vyf-v5-3d5"/>
+                            <constraint firstItem="xR9-J3-IEF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="WBX-Nl-Efb"/>
+                            <constraint firstItem="S8D-gd-G7j" firstAttribute="top" secondItem="ch8-Be-mue" secondAttribute="top" constant="-10" id="XjN-WR-XCb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Q0w-zT-1Su" secondAttribute="trailing" constant="50" id="ZdU-ZL-Pqm"/>
+                            <constraint firstItem="S8D-gd-G7j" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.7" id="afd-23-4lv"/>
+                            <constraint firstItem="ch8-Be-mue" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="amE-lS-HD2"/>
+                            <constraint firstItem="Q0w-zT-1Su" firstAttribute="bottom" secondItem="S8D-gd-G7j" secondAttribute="bottom" constant="-10" id="l8L-8N-Vh8"/>
+                            <constraint firstItem="Q0w-zT-1Su" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="mU8-JG-o6V"/>
+                            <constraint firstItem="S8D-gd-G7j" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.95" id="vGW-dZ-PeW"/>
+                            <constraint firstItem="S8D-gd-G7j" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xyF-HV-8j7"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="cameraButton" destination="EGs-Hl-LXl" id="uWM-cO-1nM"/>
+                        <outlet property="imagePickerView" destination="S8D-gd-G7j" id="5WV-ev-LFt"/>
+                        <outlet property="lowerText" destination="Q0w-zT-1Su" id="e6o-uV-eZI"/>
+                        <outlet property="navigationBar" destination="waS-lE-IQz" id="BlD-3G-hW9"/>
+                        <outlet property="toolBar" destination="xR9-J3-IEF" id="Ui5-3a-qgH"/>
+                        <outlet property="upperText" destination="ch8-Be-mue" id="2wX-t5-QVE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-23.188405797101453" y="71.651785714285708"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
